force-app/main/default/objects/Lead/fields/DevCore__Bisnode_Changed_Fields__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Changed_Fields__c</fullName>
    <label>Bisnode Changed Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>