force-app/main/default/objects/Lead/fields/DevCore__Bisnode_Company_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Company_Last_Modified_Date__c</fullName>
    <label>Bisnode - Company Last Modified Date</label>
    <type>DateTime</type>
</CustomField>