force-app/main/default/objects/Lead/fields/DevCore__Bisnode_Company_Num_of_Employees_Value__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Company_Num_of_Employees_Value__c</fullName>
    <label>Bisnode - Company Reported Num Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>