force-app/main/default/objects/Lead/fields/DevCore__Bisnode_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Number_of_Employees__c</fullName>
    <label>Bisnode - Number of Employees - Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>