force-app/main/default/objects/Lead/fields/DevCore__Bisnode_Turnover_Value__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Turnover_Value__c</fullName>
    <label>Bisnode - Turnover - Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>