force-app/main/default/objects/Lead/fields/DevCore__Bisnode_Worksite_Postal_State_Name__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Worksite_Postal_State_Name__c</fullName>
    <label>Bisnode - Worksite Postal State Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>