force-app/main/default/objects/Lead/fields/DevCore__Bisnode_Worksite_Status__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Worksite_Status__c</fullName>
    <label>Bisnode Worksite Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>