force-app/main/default/objects/Lead/fields/DevCore__Bisnode_Worksite_Visit_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>DevCore__Bisnode_Worksite_Visit_Country_Code__c</fullName>
    <label>Bisnode - Worksite Visit Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>