force-app/main/default/objects/Lead/fields/DevCore__BisnodeCompanyId__c.field-meta.xml
<CustomField>
    <fullName>DevCore__BisnodeCompanyId__c</fullName>
    <label>Bisnode Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>