force-app/main/default/objects/Lead/fields/DevCore__BisnodeCompanyModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>DevCore__BisnodeCompanyModifiedDate__c</fullName>
    <label>Bisnode - Company Update Applied Date</label>
    <type>DateTime</type>
</CustomField>