force-app/main/default/objects/Lead/fields/DevCore__BisnodeCountry__c.field-meta.xml
<CustomField>
    <fullName>DevCore__BisnodeCountry__c</fullName>
    <label>Bisnode Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DevCore__BisnodeCountries</valueSetName>
    </valueSet>
</CustomField>