force-app/main/default/objects/Lead/fields/DevCore__BisnodeDummyAccount__c.field-meta.xml
<CustomField>
    <fullName>DevCore__BisnodeDummyAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bisnode Dummy Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bisnode Leads</relationshipLabel>
    <relationshipName>BisnodeLeads</relationshipName>
    <type>Lookup</type>
</CustomField>