force-app/main/default/objects/Lead/fields/DevCore__BisnodeWorksiteId__c.field-meta.xml
<CustomField>
    <fullName>DevCore__BisnodeWorksiteId__c</fullName>
    <label>Bisnode Worksite ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>