force-app/main/default/objects/Lead/fields/DevCore__BisnodeWorksiteModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>DevCore__BisnodeWorksiteModifiedDate__c</fullName>
    <label>Bisnode - Worksite Update Applied Date</label>
    <type>DateTime</type>
</CustomField>