force-app/main/default/objects/Lead/fields/E_bok__c.field-meta.xml
<CustomField>
    <fullName>E_bok__c</fullName>
    <inlineHelpText>This field is referenced to which E-book they have downloaded</inlineHelpText>
    <label>E-bok</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Web_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Håndbok for Frilansere</fullName>
                <label>Våre Beste Tips til Frilansere og Mindre Foretak</label>
            </value>
            <value>
                <fullName>Implementere Nytt Økonomisystem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>