force-app/main/default/objects/Lead/fields/Firm__c.field-meta.xml
<CustomField>
    <fullName>Firm__c</fullName>
    <inlineHelpText>This is related to where on the web the contact us from originates from</inlineHelpText>
    <label>Firm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>VIEW Construct AS</fullName>
            </value>
            <value>
                <fullName>VIEW Frilans</fullName>
                <isActive>false</isActive>
                <label>VIEW Frilans</label>
            </value>
            <value>
                <fullName>VIEW Ledger AB</fullName>
            </value>
            <value>
                <fullName>VIEW Ledger AS</fullName>
            </value>
            <value>
                <fullName>VIEW Maritime AS</fullName>
            </value>
            <value>
                <fullName>VIEW Tax AS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>