force-app/main/default/objects/Lead/fields/Web_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Source__c</fullName>
    <inlineHelpText>This field is referenced to what form on the web this lead is coming from</inlineHelpText>
    <label>Web Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Firm__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kontakt Oss</fullName>
            </value>
            <value>
                <fullName>Få et Tilbud</fullName>
            </value>
            <value>
                <fullName>Få en Gratis Demo</fullName>
            </value>
            <value>
                <fullName>Få en Gratis Demo av Tripletex</fullName>
            </value>
            <value>
                <fullName>Prøv Tripletex Gratis</fullName>
            </value>
            <value>
                <fullName>Ebok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>