force-app/main/default/objects/Lead/validationRules/Lead_source_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_source_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status , &apos;Contacted&apos;))
&amp;&amp;
ISBLANK(TEXT(LeadSource))</errorConditionFormula>
    <errorMessage>Lead source must be filled out</errorMessage>
</ValidationRule>