force-app/main/default/objects/Lead/validationRules/Required_phone_or_email.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_phone_or_email</fullName>
    <active>true</active>
    <description>Lead must have phone or email adress before converting</description>
    <errorConditionFormula>IsConverted =TRUE
&amp;&amp;
ISBLANK(Phone)
&amp;&amp;
ISBLANK(MobilePhone)
&amp;&amp;
ISBLANK(Email)</errorConditionFormula>
    <errorMessage>Please fill in either phone number or email adress before converting the lead</errorMessage>
</ValidationRule>