force-app/main/default/objects/Lead/validationRules/Validate_Discualified_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Discualified_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &quot;Disqualified&quot;) 
&amp;&amp;
ISBLANK(TEXT(Disqualified_reason__c))</errorConditionFormula>
    <errorMessage>Fill in Disqualified Reason</errorMessage>
</ValidationRule>