force-app/main/default/objects/Lead/listViews/E_Bok_VIEW_Frilans_Lead.listView-meta.xml
<ListView>
    <fullName>E_Bok_VIEW_Frilans_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>E-Bok VIEW Frilans</label>
    <queue>E_Bok_VIEW_Frilans</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>