force-app/main/default/objects/Lead/listViews/E_Bok_view_ledger_Lead.listView-meta.xml
<ListView>
    <fullName>E_Bok_view_ledger_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>E-Bok VIEW Ledger</label>
    <queue>E_Bok_view_ledger</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>