force-app/main/default/objects/Lead/listViews/Innovation_Support_Lead.listView-meta.xml
<ListView>
    <fullName>Innovation_Support_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Innovation Support</label>
    <queue>Innovation_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>