force-app/main/default/objects/Lead/listViews/KRAFT_Lead.listView-meta.xml
<ListView>
    <fullName>KRAFT_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>KRAFT</label>
    <queue>KRAFT</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>