force-app/main/default/objects/Lead/listViews/Leads_queue.listView-meta.xml
<ListView>
    <fullName>Leads_queue</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Disqualified_reason__c</columns>
    <filterScope>Queue</filterScope>
    <label>Leads queue</label>
    <queue>VIEW_Ledger_AS</queue>
</ListView>