force-app/main/default/objects/Lead/listViews/Regnskapsf_rertilbud_no_Lead.listView-meta.xml
<ListView>
    <fullName>Regnskapsf_rertilbud_no_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Regnskapsførertilbud.no</label>
    <queue>Regnskapsf_rertilbud_no</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>