force-app/main/default/objects/Lead/listViews/VIEW_Family_Office_Lead.listView-meta.xml
<ListView>
    <fullName>VIEW_Family_Office_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>VIEW Family Office</label>
    <queue>VIEW_Family_Office</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>