force-app/main/default/objects/Lead/listViews/VIEW_Ledger_AS.listView-meta.xml
<ListView>
    <fullName>VIEW_Ledger_AS</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>VIEW Ledger AS</label>
    <queue>VIEW_Ledger_AS</queue>
</ListView>